--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,24 @@ body{
     padding: 5px;
 }
 
+
+.main__box2{
+    width: 280px;
+    height: 350px;
+    resize: none;
+    outline: none;
+    border: 0;
+    padding: 5px;
+}
+
+
 .main__box::placeholder{
+    font-family: monospace;
+    font-size: 15px;
+    text-transform: uppercase;
+}
+
+.main__box2::placeholder{
     font-family: monospace;
     font-size: 15px;
     text-transform: uppercase;
@@ -75,17 +92,42 @@ body{
     color: #0A3871;
 }
 
+.main__outputContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.main__output{
+    width: 280px;
+    height: 350px;
+    resize: none;
+    outline: none;
+    border: 0;
+    padding: 5px;
+}
+
+.main .oculto{
+    display: none;
+}
+
+
 .main__alert{
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
     border-radius: 32px;
     width: 100%;
-    max-width: 300px;
+    max-width: 700px;
     height: 180px;
     padding: 32px;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+
+.main__alert img{
+    display: none;
 }
 
 .alert__title{
@@ -102,3 +144,61 @@ body{
     color: #495057;
 }
 
+
+@media(min-width:768px){
+
+    .main__box{
+        width: 700px;
+        height: 400px;
+        resize: none;
+        outline: none;
+        border: 0;
+        padding: 5px;
+        font-size: 18px;
+    }
+    
+    .main__box::placeholder{
+        font-size: 18px;
+    }
+
+
+    .main__btn{
+        flex-direction: row;
+    }
+}
+
+
+@media(min-width:1440px){
+    .main{
+        flex-direction: row;
+        justify-content: space-around;
+        height: 800px;
+    }
+
+    .containerDesktop{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .main__box{
+        width: 350px;
+        height: 500px;
+    }
+    
+    .main__box::placeholder{
+        font-size: 18px;
+    }
+
+
+    .main__alert{
+        width: 400px;
+        height: 700px;
+    }
+    .main__alert img{
+        width: 300px;
+        height: 300px;
+        display: block;
+    }
+}
